[tool.poetry]
name = "lise-planning-api"
version = "0.1.0"
description = "An API that scrap lise.ensam.eu & extract all event information"
authors = ["edayot <pro.e.dayot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
ics = "^0.7.2"
tqdm = "^4.66.2"
beautifulsoup4 = "^4.12.3"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
app = "lise_planning_api.main:main"