[tool.poetry]
name = "lise-planning-api"
version = "0.1.0"
description = "An API that scrap lise.ensam.eu & extract all event information"
authors = ["edayot <pro.e.dayot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
ics = "^0.7.2"
tqdm = "^4.66.2"
beautifulsoup4 = "^4.12.3"
uvicorn = {git = "https://github.com/edayot/uvicorn.git", branch = "master"}
requests = "^2.31.0"
python-dotenv = "^1.0.1"
argon2-cffi = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
app = "lise_planning_api.main:main"